k8s/api/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  tls:
    - hosts:
        - cowsay-dev.keld.co
      secretName: cowsay-dev-tls
  rules:
    - host: cowsay-dev.keld.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
